--- a/index.html
+++ b/index.html
@@ -11,17 +11,31 @@
 
 <body>
   <div class="header">
-    <img src="https://cdn.pixabay.com/photo/2021/10/25/23/38/mountains-6742185_1280.jpg">
+    <img src="https://images.unsplash.com/photo-1579548122080-c35fd6820ecb?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=1170">
     <h1>Welcome Back!</h1>
   </div>
   <div class="links">
-    <a href="">Entertainment</a>
-    <a href="">Social Media</a>
-    <a href="">Coding</a>
-    <a href="">Work</a>
+    <div>
+      <p>Entertainment</p>
+      <a href="https://www.youtube.com">Youtube</a>
+      <a href="https://www.netflix.com">Netflix</a>
+      <a href="https://www.hbomax.com">HBO Max</a>
+    </div>
+    <div>
+      <p>Social Media</p>
+      <a href="https://www.reddit.com">Reddit</a>
+      <a href="https://www.instagram.com">Instagram</a>
+      <a href="https://www.facebook.com">Facebook</a>
+    </div>
+    <div>
+      <p>Coding</p>
+      <a href="https://www.github.com">Github</a>
+      <a href="https://www.theodinproject.com">The Odin Project</a>
+    </div>
+    <div>
+      <p>Work</p>
+    </div>
   </div>
-  <div class="content">
-    <p>here we go?</p>
   </div>
   <div class="footer"></div>
 </body>
