Started layouts and colors

--- a/index.html
+++ b/index.html
@@ -10,36 +10,32 @@
 </head>
 
 <body>
-  <div class="header">
-    <img src="https://images.unsplash.com/photo-1579548122080-c35fd6820ecb?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=1170">
-    <h1>Welcome Back!</h1>
-  </div>
-  <div class="links">
-    <div>
-      <p>Entertainment</p>
-      <a href="https://www.youtube.com">Youtube</a>
-      <a href="https://www.netflix.com">Netflix</a>
-      <a href="https://www.hbomax.com">HBO Max</a>
+  <div class="fullpage">
+    <div class="header">
+      <div class="menu">
+        <img src="./assets/menu-alt-2-svgrepo-com.svg">
+      </div>
+      <div class="clock"></div>
+      <div class="weather"></div>
+      <div class="profile"></div>
     </div>
-    <div>
-      <p>Social Media</p>
-      <a href="https://www.reddit.com">Reddit</a>
-      <a href="https://www.instagram.com">Instagram</a>
-      <a href="https://www.facebook.com">Facebook</a>
+    <div class="sidebar">
+      <ul>
+        <li>stuff</li>
+        <li>stuff</li>
+        <li>stuff</li>
+        <li>stuff</li>
+        <li>stuff</li>
+    </ul>
     </div>
-    <div>
-      <p>Coding</p>
-      <a href="https://www.github.com">Github</a>
-      <a href="https://www.theodinproject.com">The Odin Project</a>
+    <div class="front-content">
+      <div class="news"></div>
+      <div class="notes"></div>
     </div>
-    <div>
-      <p>Work</p>
-    </div>
-  </div>
-  </div>
-  <div class="footer"></div>
-  <div>
-    <p>Hey</p>
+    <div class="work-content"></div>
+    <div class="home-content"></div>
+    <div class="code-content"></div>
+    <div class="footer"></div>
   </div>
 </body>
 
